Apply a patch submitted by Edward Ribeiro that fixes a ==/.equals mixup and some cleanup.
Cleanup consists of converting string instance construction to just specifying the string in "".
Also replace usage of Hashtable with sychronized hash map.